# conquest

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
assets/: base-blue.aseprite  farm-blue-1.aseprite  farm-blue-2.aseprite  farm-red-3.aseprite  tile-blue-1.aseprite  tile-water.aseprite
client/: Cargo.toml
client/assets/: base-red.aseprite  farm-blue-3.aseprite  farm-red-1.aseprite  farm-red-2.aseprite  selector.aseprite  tile-blue-2.aseprite  tile-blue-3.aseprite  tile-blue-4.aseprite  tile-mountain-blue.aseprite  tile-mountain-red.aseprite  tile-mountain.aseprite  tile-none.aseprite  tile-red-1.aseprite  tile-red-2.aseprite  tile-red-3.aseprite  tile-red-4.aseprite
client/src/: assets.rs  camera.rs  grid_mouse.rs  hud.rs  main.rs  menu.rs  tile_menu.rs  utils.rs
client/src/tiles/: mod.rs  tile_bundle.rs
server/: Cargo.toml
server/src/: main.rs
src/: assets.rs  camera.rs  consts.rs  debug.rs  farms.rs  grid_mouse.rs  hud.rs  input.rs  main.rs  menu.rs  player.rs  terrain.rs  turn.rs  utils.rs
src/tiles/: mod.rs  tests.rs  tile_bundle.rs  tile_event.rs  tile_grid.rs
store/: Cargo.toml
store/src/: consts.rs  events.rs  farms.rs  grid.rs  lib.rs  player.rs  state.rs  terrain.rs  tiles.rs
