[package]
name = "conquest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.78"
bevy = { version = "0.12.0", features = ["dynamic_linking"] }
bevy_ggrs = "0.14.0"
bevy_matchbox = { version = "0.8.0", features = ["ggrs"] }
bevy_renet = "0.0.10"
bytemuck = { version = "1.14.0", features = ["derive"] }
ggrs = "0.10.0"
itertools = "0.12.0"
rand = "0.8.5"
strum = { version = "0.25.0", features = ["derive"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
