[package]
name = "conquest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.78"
bevy = { version = "0.12.0", features = ["dynamic_linking"] }
bevy_renet = "0.0.10"
bincode = "1.3.3"
itertools = "0.12.0"
rand = "0.8.5"
strum = { version = "0.25.0", features = ["derive"] }
store = { path = "../store" }
bevy_simple_text_input = "0.3.1"
